<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vendas</string>
    <string name="app_site">www.autaz.me</string>
    <string name="app_description">Automação de A a Z</string>
    <string name="app_catchphrase">Automação comercial inteligente</string>

    <!-- Títulos -->
    <string name="title_activity_sales">SalesActivity</string>
    <string name="title_dialog_new_sale">Informações da Venda</string>
    <string name="title_dialog_sale_pay_type">Como você gostaria de pagar?</string>
    <string name="title_dialog_product">Adicionar/Editar Produto</string>
    <string name="title_dialog_product_clicked">Editar/Remover Produto</string>
    <string name="title_dialog_select_date">Alterar data de consulta</string>
    <string name="title_activity_layout">Layout do Sistema para seu Estabelecimento</string>
    <string name="title_activity_sales_sync">Vendas efetuadas neste ponto</string>
    <string name="title_activity_products_sync">Produtos</string>

    <string name="dialog_sale_item_edit_obs_title">Escreva uma observação neste ítem</string>
    <string name="dialog_sale_item_edit_obs_sub_title">a observação aparecerrá no cupom impresso</string>
    <string name="dialog_sale_item_edit_obs_hint">Observações sobre o item...</string>
    <string name="dialog_sale_item_edit_save">Salvar observação</string>
    <string name="dialog_suggestion_title">Envie uma Sugestão</string>
    <string name="dialog_suggestion_content">Ajude-nos a melhorar. O que você acha que pode ser mudado neste aplicativo?</string>
    <string name="dialog_suggestion_hint">Sugiro uma melhoria em...</string>
    <string name="dialog_syncing">Sincronizando dados...</string>

    <!-- Strings SaleControllActivity -->
    <string name="txt_total_sale">Total:</string>
    <string name="txt_total_paid">Valor Pago:</string>
    <string name="txt_total_to_pay">Total a Pagar:</string>
    <string name="txt_bt_product_stock">%1$s em estoque</string>
    <string name="txt_clean_sale_title">Limpar Lista de Compra</string>
    <string name="txt_clean_sale_text">Deseja realmente remover os produtos dessa venda?</string>
    <string name="txt_cancel_sale_title">Cancelar Venda</string>
    <string name="txt_cancel_sale_text">Deseja realmente cancelar essa venda?</string>

    <!-- Strings SalesActivity -->
    <string name="txt_bt_sale_init_name">Venda %1$s</string>
    <string name="txt_bt_sale_code_controll">Controle: %1$s</string>
    <string name="txt_bt_sale_num_item">%1$s item</string>
    <string name="txt_bt_sale_num_items">%1$s itens</string>
    <string name="code_wait">Senha de espera: %1$s</string>

    <!-- Strings SalesSyncActivity -->
    <string name="txt_total_saled">Total vendido no dia %1$s.\n Toque aqui para alterar a data</string>
    <string name="txt_total_saled_range">Total vendido entre os dias %1$s ao %2$s.\n Toque aqui para alterar a data</string>
    <string name="txt_resume">Resumo do dia.\nMaiores detalhes no sistema online.</string>
    <string name="txt_payments_with">Pagamentos com %1$s</string>
    <string name="txt_payment_with">Pagamento com %1$s</string>
    <string name="txt_sales_open">Valores em Aberto</string>
    <string name="txt_sales_canceled">Vendas Canceladas</string>

    <!-- Strings de Ações -->
    <string name="action_sale_new">Nova Venda</string>
    <string name="action_sale_pay">Pagar</string>
    <string name="action_sale_clean">Limpar</string>
    <string name="action_print_cupom">Imprimir Cupom</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_back">Voltar</string>
    <string name="action_yes">Sim</string>
    <string name="action_no">Não</string>
    <string name="action_send">Enviar</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">Editar</string>
    <string name="action_remove">Remover</string>
    <string name="action_yes_remove">Sim, remover!</string>
    <string name="action_try_again">Tentar novament</string>
    <string name="action_save">Salvar</string>

    <!-- Strings Dialog New Sale -->
    <string name="txt_no_show_dialog_new_sale">Não exibir novamente essa caixa, ao clicar em \"Nova Venda\". Altere isso em \"Ajustes\".</string>
    <string name="txt_no_show_dialog_new_sale_alert">Atenção, essa caixa de dialogo não aparecerá novamente. Altere isso em \"Ajustes\".</string>
    <string name="txt_client">Nome do Cliente</string>
    <string name="txt_client_email">E-mail do Cliente</string>
    <string name="txt_client_cpf">CPF do Cliente</string>
    <string name="txt_code_sale">Codigo Venda (mesa)</string>
    <string name="txt_seller_code">Vendedor/Garçom (código ou nome)</string>

    <!-- Strings Dialog Sale Pay -->
    <string name="sale_pay_value_to_pay">Valor à Pagar</string>
    <string name="sale_pay_value_received">Valor Recebido</string>
    <string name="sale_pay_spare_money">Troco</string>
    <string name="sale_pay_type_money">Dinheiro</string>
    <string name="sale_pay_type_debt">Débito</string>
    <string name="sale_pay_type_credit">Crédito</string>
    <string name="sale_pay_type_voucher">Voucher</string>


    <!-- Strings Dialog Ajustes -->
    <string name="float_menu_item_sync">Sincronizar \n Dados</string>
    <string name="float_menu_item_my_profile">Meu \nPerfil</string>
    <string name="float_menu_item_style">Estilo</string>
    <string name="float_menu_item_help">Socorro</string>
    <string name="float_menu_item_calc">Calculadora</string>
    <string name="float_menu_item_products">Produtos</string>
    <string name="float_menu_item_sales">Vendas</string>
    <string name="float_menu_item_layout">Layout</string>
    <string name="float_menu_item_adjustments">Ajustes</string>
    <string name="float_menu_item_suggestion">Sugestões</string>
    <string name="float_menu_item_printer">Configurar \nImpressora</string>

    <!-- Strings SaleCloseDialog -->
    <string name="txt_empty_list">A lista de compra está vazia, deseja cancelar a venda?</string>
    <string name="txt_hide_dialog">Não exibir novamente essa caixa de diálogo.</string>

    <!-- Tipo de status que a venda pode assumir -->
    <string name="txt_sale_open">Aberta</string>
    <string name="txt_sale_open_2">Vendas em aberto</string>
    <string name="txt_sale_paid_partial">Pagamento Parcial</string>
    <string name="txt_sale_paid">Pagamento Total</string>
    <string name="txt_sale_canceled">Cancelada</string>
    <string name="txt_sale_canceleds">Canceladas</string>

    <!-- Strings Diversos -->
    <string name="txt_please_wait">Por Favor Aguarde....</string>
    <string name="txt_products_empty">Sua lista de produtos está vazia!</string>
    <string name="txt_not_display_again">Não exibir isso novamente!</string>
    <string name="txt_physical_device_conected">Periférico Conectado</string>
    <string name="txt_disable_physical_keyboard">Desmarque a opção \"HARDWARE\" para exibir o teclado virtual!</string>
    <string name="txt_change_price_product">Alterar o Valor do Produto</string>
    <string name="txt_internet_off">Internet Offline.</string>
    <string name="txt_internet_necessary">Você precisa estar conectado na internet.</string>

    <!-- Strings de Formularios -->
    <string name="txt_form_incomplete">Formulário Incompleto</string>
    <string name="txt_form_fill">Preencha corretamente todos os campos</string>
    <string name="txt_login">Faça login para começar a utilizar</string>
    <string name="txt_login_success">Login efetuado com sucesso</string>
    <string name="txt_input_pass">Digite a senha</string>
    <string name="txt_sugestion_subject">Assunto</string>
    <string name="txt_sugestion_text">Digite sua sugestão</string>
    <string name="txt_product_name">Nome do produto</string>
    <string name="txt_product_price_coast">Preço de custo</string>
    <string name="txt_product_price_resalle">Preço de revenda</string>

    <!-- Mensagens -->
    <string name="txt_title_remove_entry">Remover Registro</string>
    <string name="txt_confirm_remove_product">Deseja realmente remover este produto?</string>
    <string name="title_activity_maps">Map</string>

    <string name="process_login">Estamos verificando suas credenciais.</string>
    <string name="process_download_data_account">Estamos baixando os dados da sua conta.</string>

    <string name="err_oops">Ooops...</string>
    <string name="err_internal_error">Ocorreu um erro interno</string>
    <string name="err_try_again">Por favor, tente novamente mais tarde.</string>
    <string name="err_working_offline_title">Você esta trabalhando off-line</string>
    <string name="err_working_offline_msg">Tudo que você vender ou editar no programa ficará salvo apenas neste equipamento!</string>
    <string name="err_auth_invalid">Nossos servidores recusaram suas credenciais.</string>
    <string name="err_login_title">Erro de credenciais</string>
    <string name="err_login_try_again">Efetue login novamente</string>
    <string name="err_login_msg">Os dados inseridos não conferem com nossos registros.</string>
    <string name="err_download_products_account">Não conseguimos recuperar os produtos da sua conta!</string>
    <string name="err_download_data_account">Não conseguimos recuperar os dados da sua conta.</string>

</resources>
