<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/txtClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/txt_client"
        android:inputType="textPersonName|textNoSuggestions" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/txtClientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtClientName"
        android:ems="10"
        android:hint="@string/txt_client_email"
        android:inputType="textEmailAddress|textNoSuggestions" />
    
    <EditText
        android:id="@+id/txtClientCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtClientEmail"
        android:ems="10"
        android:hint="@string/txt_client_cpf"
        android:inputType="numberSigned|textNoSuggestions" />

    <EditText
        android:id="@+id/txtCodeSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtClientCpf"
        android:ems="10"
        android:hint="@string/txt_code_sale"
        android:inputType="number|textNoSuggestions" />

    <EditText
        android:id="@+id/txtSellerCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtCodeSale"
        android:ems="10"
        android:hint="@string/txt_seller_code"
        android:inputType="text|textNoSuggestions" >

    </EditText>

    <CheckBox
        android:id="@+id/cbShowDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtSellerCode"
        android:gravity="left|center_vertical"
        android:text="@string/txt_no_show_dialog_new_sale" />

</RelativeLayout>