<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btSend"
        android:ems="10"
        android:hint="@string/txt_product_name"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <faranjit.currency.edittext.CurrencyEditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtName"
        android:layout_toLeftOf="@+id/btSend"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:text="0,00"
        android:ems="10"
        app:groupDivider="."
        app:monetaryDivider=","
        app:locale="pt_BR"
        app:showSymbol="true" >

        <requestFocus />
    </faranjit.currency.edittext.CurrencyEditText>
    
	<Button
        android:id="@+id/btSend"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:text="@string/action_send" />
	
	<Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btSend"
        android:text="@string/action_cancel" />
</RelativeLayout>
