<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialog_sale_item_edit_obs_title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/black_opaque"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_sale_item_edit_obs_sub_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/title"
        android:textColor="@color/black_opaque"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/txtObs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/subTitle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:minLines="3"
        android:maxLines="10"
        android:hint="@string/dialog_sale_item_edit_obs_hint" />

    <Button
        android:id="@+id/btDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:background="@drawable/bg_button_item_sale_descrease"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtObs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btSaveObs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sale_item_edit_save"
        android:background="@drawable/bg_button_item_sale_save_obs"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtObs"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:layout_below="@+id/txtObs"
        android:layout_alignRight="@+id/txtObs"
        android:layout_alignEnd="@+id/txtObs"
        android:background="@drawable/bg_button_item_sale_increase"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" />

</RelativeLayout>