<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"><!--
    android:background="@color/purple" -->

    <!--<ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>-->

    <com.dynamitechetan.flowinggradient.FlowingGradient
        android:id="@+id/bgGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:transition_duration = "4000"
        app:transition_drawable="@drawable/trans"/>

    <Button
        android:id="@+id/btNewSale"
        android:layout_width="@dimen/act_sale_grid_btn_new_sale_width"
        android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        style="@style/buttonNewSale"
        android:text="@string/action_sale_new"
        android:layout_marginBottom="@dimen/vertical_padding_textView"
        tools:ignore="RtlHardcoded" />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmentedButons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/btNewSale"
        android:layout_alignBottom="@+id/btNewSale"
        android:padding="0dp"
        android:gravity="top|left"
        app:sc_border_width="2dp"
        app:sc_corner_radius="@dimen/corner_button"
        app:sc_tint_color="@color/white"
        app:sc_checked_text_color="@color/black">


        <RadioButton
            android:id="@+id/OPEN"
            android:layout_width="@dimen/act_sale_grid_segmented_btn_width"
            android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
            android:padding="0dp"
            android:text="@string/txt_sale_open_2"
            android:tag="OPEN"
            android:checked="true"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/PAID_PARTIAL"
            android:layout_width="@dimen/act_sale_grid_segmented_btn_width"
            android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
            android:padding="0dp"
            android:text="@string/txt_sale_paid_partial"
            android:tag="PAID_PARTIAL"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/PAID"
            android:layout_width="@dimen/act_sale_grid_segmented_btn_width"
            android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
            android:padding="0dp"
            android:text="@string/txt_sale_paid"
            android:tag="PAID"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/CANCELED"
            android:layout_width="@dimen/act_sale_grid_segmented_btn_width"
            android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
            android:padding="0dp"
            android:text="@string/txt_sale_canceleds"
            android:tag="CANCELED"
            style="@style/RadioButton" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/act_sale_grid_btn_new_sale_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/segmentedButons"
        android:layout_alignBottom="@+id/btNewSale"
        tools:ignore="RtlHardcoded"
        style="@style/searchView" />
    
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/vertical_padding_textView"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/btNewSale"
        android:gravity="center" 
        android:horizontalSpacing="@dimen/grid_view_spacing_horizontal"
        android:verticalSpacing="@dimen/grid_view_spacing_vertical"
        android:columnWidth="@dimen/grid_view_columns_width"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth">
    </GridView>

    <Button
        android:id="@+id/btTeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="85dp"
        android:background="@android:color/transparent"/>

    <br.com.i9algo.autaz.pdv.ui.components.FloatUserButtonView
        android:id="@+id/btOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="background"
        android:onClick="setBackgroundImage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="85dp"
        android:visibility="gone"/>

</RelativeLayout>
